policy/tests/require-department-label/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-fail
  labels:
    mycompany.com/policy-version: 0.0.0-unset
spec:
  containers:
    - name: app
      image: nginx:latest
